<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="allow_disposed_exceptions_key">allow_disposed_exceptions_key</string>
    <string name="allow_heap_dumping_key">allow_heap_dumping_key</string>
    <string name="caption_setting_description">Modify player caption text scale and background styles. Requires app restart to take effect</string>
    <string name="caption_setting_title">Captions</string>
    <string name="caption_settings_key">caption_settings_key</string>
    <string name="channels">Channels</string>
    <string name="check_new_streams">Run check for new streams</string>
    <string name="check_new_streams_key">check_new_streams</string>
    <string name="clear_cookie_key">clear_cookie</string>
    <string name="clear_cookie_summary">Clear cookies that NewPipe stores when you solve a reCAPTCHA</string>
    <string name="clear_cookie_title">Clear reCAPTCHA cookies</string>
    <string name="clear_playback_states_key">clear_playback_states</string>
    <string name="clear_playback_states_summary">Deletes all playback positions</string>
    <string name="clear_playback_states_title">Delete playback positions</string>
    <string name="clear_search_history_key">clear_search_history</string>
    <string name="clear_search_history_summary">Deletes history of search keywords</string>
    <string name="clear_search_history_title">Clear search history</string>
    <string name="clear_views_history_key">clear_play_history</string>
    <string name="clear_views_history_summary">Deletes the history of played streams and the playback positions</string>
    <string name="clear_views_history_title">Clear watch history</string>
    <string name="content">Content</string>
    <string name="crash_the_app">Crash the app</string>
    <string name="crash_the_app_key">crash_the_app_key</string>
    <string name="create_error_notification">Create an error notification</string>
    <string name="create_error_notification_key">create_error_notification_key</string>
    <string name="debug_pref_screen_key">debug_pref_screen_key</string>
    <string name="default_file_charset_value">@string/charset_most_special_value</string>
    <string name="default_night_theme_value">@string/dark_theme_key</string>
    <string name="default_theme_value">@string/auto_device_theme_key</string>
    <string name="download_path_audio_dialog_title">Choose download folder for audio files</string>
    <string name="download_path_audio_key">download_path_audio</string>
    <string name="download_path_audio_summary">Downloaded audio files are stored here</string>
    <string name="download_path_audio_title">Audio download folder</string>
    <string name="download_path_dialog_title">Choose download folder for video files</string>
    <string name="download_path_summary">Downloaded video files are stored here</string>
    <string name="download_path_title">Video download folder</string>
    <string name="download_path_video_key">download_path</string>
    <string name="downloads_cross_network">cross_network_downloads</string>
    <string name="downloads_maximum_retry">downloads_max_retry</string>
    <string name="downloads_maximum_retry_default">3</string>
    <string name="downloads_queue_limit">downloads_queue_limit</string>
    <string name="downloads_storage_ask">downloads_storage_ask</string>
    <string name="downloads_storage_ask_summary">"You will be asked where to save each download.
Enable the system folder picker (SAF) if you want to download to an external SD card"</string>
    <string name="downloads_storage_ask_title">Ask where to download</string>
    <string name="downloads_storage_use_saf_summary">"The 'Storage Access Framework' allows downloads to an external SD card"</string>
    <string name="downloads_storage_use_saf_title">Use system folder picker (SAF)</string>
    <string name="enable_disposed_exceptions_summary">Force reporting of undeliverable Rx exceptions outside of fragment or activity lifecycle after disposal</string>
    <string name="enable_disposed_exceptions_title">Report out-of-lifecycle errors</string>
    <string name="enable_leak_canary_summary">Memory leak monitoring may cause the app to become unresponsive when heap dumping</string>
    <string name="enable_playback_resume_key">enable_playback_resume</string>
    <string name="enable_playback_resume_summary">Restore last playback position</string>
    <string name="enable_playback_resume_title">Resume playback</string>
    <string name="enable_playback_state_lists_key">enable_playback_state_lists</string>
    <string name="enable_playback_state_lists_summary">Show playback position indicators in lists</string>
    <string name="enable_playback_state_lists_title">Positions in lists</string>
    <string name="enable_queue_limit">Limit download queue</string>
    <string name="enable_queue_limit_desc">One download will run at the same time</string>
    <string name="enable_search_history_key">enable_search_history</string>
    <string name="enable_search_history_summary">Store search queries locally</string>
    <string name="enable_search_history_title">Search history</string>
    <string name="enable_streams_notifications">enable_streams_notifications</string>
    <string name="enable_streams_notifications_summary">Notify about new streams from subscriptions</string>
    <string name="enable_streams_notifications_title">New streams notifications</string>
    <string name="enable_watch_history_key">enable_watch_history</string>
    <string name="enable_watch_history_summary">Keep track of watched videos</string>
    <string name="enable_watch_history_title">Watch history</string>
    <string name="error_snackbar_action">Report</string>
    <string name="export_data">export_data</string>
    <string name="export_data_summary">Export history, subscriptions, playlists and settings</string>
    <string name="export_data_title">Export database</string>
    <string name="general_error">Error</string>
    <string name="get_notified">Get notified</string>
    <string name="import_data">import_data</string>
    <string name="import_data_summary">Overrides your current history, subscriptions, playlists and (optionally) settings</string>
    <string name="import_data_title">Import database</string>
    <string name="leakcanary">LeakCanary</string>
    <string name="list_view_mode">List view mode</string>
    <string name="list_view_mode_key">list_view_mode</string>
    <string name="list_view_mode_value">@string/list_view_mode_auto_key</string>
    <string name="main_tabs_position_key">main_tabs_position</string>
    <string name="main_tabs_position_summary">Move main tab selector to the bottom</string>
    <string name="main_tabs_position_title">Main tabs position</string>
    <string name="max_retry_desc">Maximum number of attempts before canceling the download</string>
    <string name="max_retry_msg">Maximum retries</string>
    <string name="metadata_cache_wipe_key">cache_wipe_key</string>
    <string name="metadata_cache_wipe_summary">Remove all cached webpage data</string>
    <string name="metadata_cache_wipe_title">Wipe cached metadata</string>
    <string name="night_theme_key">night_theme</string>
    <string name="night_theme_summary">Select your favorite night theme — %s</string>
    <string name="night_theme_title">Night theme</string>
    <string name="notifications">Notifications</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="pause_downloads_on_mobile">Interrupt on metered networks</string>
    <string name="pause_downloads_on_mobile_desc">Useful when switching to mobile data, although some downloads cannot be suspended</string>
    <string name="player_notification_screen_key">player_notification_screen</string>
    <string name="reset_settings">reset_settings</string>
    <string name="reset_settings_summary">Reset all settings to their default values</string>
    <string name="reset_settings_title">Reset settings</string>
    <string name="retry">Retry</string>
    <string name="rss_button_title">RSS</string>
    <string name="settings">Settings</string>
    <string name="settings_category_appearance_title">Appearance</string>
    <string name="settings_category_backup_restore_title">Backup and restore</string>
    <string name="settings_category_clear_data_title">Clear data</string>
    <string name="settings_category_debug_title">Debug</string>
    <string name="settings_category_downloads_title">Download</string>
    <string name="settings_category_history_title">History and cache</string>
    <string name="settings_category_player_notification_summary">Configure current playing stream notification</string>
    <string name="settings_category_player_notification_title">Player notification</string>
    <string name="settings_category_updates_title">Updates</string>
    <string name="settings_category_video_audio_title">Video and audio</string>
    <string name="settings_file_charset_key">file_rename_charset</string>
    <string name="settings_file_charset_title">Allowed characters in filenames</string>
    <string name="settings_file_replacement_character_default_value">_</string>
    <string name="settings_file_replacement_character_key">file_replacement_character</string>
    <string name="settings_file_replacement_character_summary">Invalid characters are replaced with this value</string>
    <string name="settings_file_replacement_character_title">Replacement character</string>
    <string name="share">Share</string>
    <string name="show_crash_the_player_key">show_crash_the_player_key</string>
    <string name="show_crash_the_player_summary">Shows a crash option when using the player</string>
    <string name="show_crash_the_player_title">Show \"Crash the player\"</string>
    <string name="show_error_snackbar">Show an error snackbar</string>
    <string name="show_error_snackbar_key">show_error_snackbar_key</string>
    <string name="show_hold_to_append_key">show_hold_to_append</string>
    <string name="show_hold_to_append_summary">Show tip when pressing the background or the popup button in video \"Details:\"</string>
    <string name="show_hold_to_append_title">Show \"Hold to enqueue\" tip</string>
    <string name="show_image_indicators_key">show_image_indicators_key</string>
    <string name="show_image_indicators_summary">Show Picasso colored ribbons on top of images indicating their source: red for network, blue for disk and green for memory</string>
    <string name="show_image_indicators_title">Show image indicators</string>
    <string name="show_memory_leaks">Show memory leaks</string>
    <string name="show_memory_leaks_key">show_memory_leaks_key</string>
    <string name="show_original_time_ago_key">show_original_time_ago_key</string>
    <string name="show_original_time_ago_summary">Original texts from services will be visible in stream items</string>
    <string name="show_original_time_ago_title">Show original time ago on items</string>
    <string name="storage_use_saf">storage_use_saf</string>
    <string name="streams_notifications_channels_key">streams_notifications_channels</string>
    <string name="streams_notifications_interval_default">14400</string>
    <string name="streams_notifications_interval_key">streams_notifications_interval</string>
    <string name="streams_notifications_interval_title">Checking frequency</string>
    <string name="streams_notifications_network_default">@string/streams_notifications_network_wifi</string>
    <string name="streams_notifications_network_key">streams_notifications_network</string>
    <string name="streams_notifications_network_title">Required network connection</string>
    <string name="tablet_mode_auto_key">auto</string>
    <string name="tablet_mode_key">tablet_mode</string>
    <string name="tablet_mode_title">Tablet mode</string>
    <string name="theme_key">theme</string>
    <string name="theme_title">Theme</string>
</resources>