<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/settings_category_downloads_title"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <SwitchPreferenceCompat android:title="@string/downloads_storage_ask_title" android:key="@string/downloads_storage_ask" android:summary="@string/downloads_storage_ask_summary" android:defaultValue="false" app:iconSpaceReserved="false" app:singleLineTitle="false" />
    <SwitchPreferenceCompat android:title="@string/downloads_storage_use_saf_title" android:key="@string/storage_use_saf" android:summary="@string/downloads_storage_use_saf_summary" android:defaultValue="true" app:iconSpaceReserved="false" app:singleLineTitle="false" />
    <Preference android:title="@string/download_path_title" android:key="@string/download_path_video_key" android:summary="@string/download_path_summary" android:dialogTitle="@string/download_path_dialog_title" app:iconSpaceReserved="false" app:singleLineTitle="false" />
    <Preference android:title="@string/download_path_audio_title" android:key="@string/download_path_audio_key" android:summary="@string/download_path_audio_summary" android:dialogTitle="@string/download_path_audio_dialog_title" app:iconSpaceReserved="false" app:singleLineTitle="false" />
    <ListPreference android:entries="@array/settings_filename_charset_name" android:title="@string/settings_file_charset_title" android:key="@string/settings_file_charset_key" android:defaultValue="@string/default_file_charset_value" android:entryValues="@array/settings_filename_charset" app:iconSpaceReserved="false" app:singleLineTitle="false" app:useSimpleSummaryProvider="true" />
    <EditTextPreference android:title="@string/settings_file_replacement_character_title" android:key="@string/settings_file_replacement_character_key" android:summary="@string/settings_file_replacement_character_summary" android:defaultValue="@string/settings_file_replacement_character_default_value" app:iconSpaceReserved="false" app:singleLineTitle="false" />
    <ListPreference android:entries="@array/downloads_maximum_retry_list" android:title="@string/max_retry_msg" android:key="@string/downloads_maximum_retry" android:summary="@string/max_retry_desc" android:defaultValue="@string/downloads_maximum_retry_default" android:entryValues="@array/downloads_maximum_retry_list" app:iconSpaceReserved="false" app:singleLineTitle="false" />
    <SwitchPreferenceCompat android:title="@string/pause_downloads_on_mobile" android:key="@string/downloads_cross_network" android:summary="@string/pause_downloads_on_mobile_desc" android:defaultValue="false" app:iconSpaceReserved="false" app:singleLineTitle="false" />
    <SwitchPreferenceCompat android:title="@string/enable_queue_limit" android:key="@string/downloads_queue_limit" android:summary="@string/enable_queue_limit_desc" android:defaultValue="true" app:iconSpaceReserved="false" app:singleLineTitle="false" />
</PreferenceScreen>
