<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/settings_category_history_title" android:key="general_preferences"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <SwitchPreferenceCompat android:title="@string/enable_watch_history_title" android:key="@string/enable_watch_history_key" android:summary="@string/enable_watch_history_summary" android:defaultValue="true" app:iconSpaceReserved="false" app:singleLineTitle="false" />
    <SwitchPreferenceCompat android:title="@string/enable_playback_resume_title" android:key="@string/enable_playback_resume_key" android:summary="@string/enable_playback_resume_summary" android:dependency="@string/enable_watch_history_key" android:defaultValue="true" app:iconSpaceReserved="false" app:singleLineTitle="false" />
    <SwitchPreferenceCompat android:title="@string/enable_playback_state_lists_title" android:key="@string/enable_playback_state_lists_key" android:summary="@string/enable_playback_state_lists_summary" android:dependency="@string/enable_watch_history_key" android:defaultValue="true" app:iconSpaceReserved="false" app:singleLineTitle="false" />
    <SwitchPreferenceCompat android:title="@string/enable_search_history_title" android:key="@string/enable_search_history_key" android:summary="@string/enable_search_history_summary" android:defaultValue="true" app:iconSpaceReserved="false" app:singleLineTitle="false" />
    <PreferenceCategory android:layout="@layout/settings_category_header_layout" android:title="@string/settings_category_clear_data_title" app:iconSpaceReserved="false" app:singleLineTitle="false">
        <Preference android:title="@string/metadata_cache_wipe_title" android:key="@string/metadata_cache_wipe_key" android:summary="@string/metadata_cache_wipe_summary" app:iconSpaceReserved="false" app:singleLineTitle="false" />
        <Preference android:title="@string/clear_views_history_title" android:key="@string/clear_views_history_key" android:summary="@string/clear_views_history_summary" app:iconSpaceReserved="false" app:singleLineTitle="false" />
        <Preference android:title="@string/clear_playback_states_title" android:key="@string/clear_playback_states_key" android:summary="@string/clear_playback_states_summary" app:iconSpaceReserved="false" app:singleLineTitle="false" />
        <Preference android:title="@string/clear_search_history_title" android:key="@string/clear_search_history_key" android:summary="@string/clear_search_history_summary" app:iconSpaceReserved="false" app:singleLineTitle="false" />
        <Preference android:title="@string/clear_cookie_title" android:key="@string/clear_cookie_key" android:summary="@string/clear_cookie_summary" app:iconSpaceReserved="false" app:singleLineTitle="false" />
    </PreferenceCategory>
</PreferenceScreen>
