<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/settings_category_appearance_title"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ListPreference android:entries="@array/theme_description_list" android:title="@string/theme_title" android:key="@string/theme_key" android:defaultValue="@string/default_theme_value" android:entryValues="@array/theme_values_list" app:iconSpaceReserved="false" app:singleLineTitle="false" app:useSimpleSummaryProvider="true" />
    <ListPreference android:entries="@array/night_theme_description_list" android:title="@string/night_theme_title" android:key="@string/night_theme_key" android:summary="@string/night_theme_summary" android:defaultValue="@string/default_night_theme_value" android:entryValues="@array/night_theme_values_list" app:iconSpaceReserved="false" app:singleLineTitle="false" />
    <SwitchPreferenceCompat android:title="@string/show_hold_to_append_title" android:key="@string/show_hold_to_append_key" android:summary="@string/show_hold_to_append_summary" android:defaultValue="true" app:iconSpaceReserved="false" app:singleLineTitle="false" />
    <ListPreference android:entries="@array/tablet_mode_description" android:title="@string/tablet_mode_title" android:key="@string/tablet_mode_key" android:defaultValue="@string/tablet_mode_auto_key" android:entryValues="@array/tablet_mode_values" app:iconSpaceReserved="false" app:singleLineTitle="false" app:useSimpleSummaryProvider="true" />
    <ListPreference android:entries="@array/list_view_mode_description" android:title="@string/list_view_mode" android:key="@string/list_view_mode_key" android:defaultValue="@string/list_view_mode_value" android:entryValues="@array/list_view_mode_values" app:iconSpaceReserved="false" app:singleLineTitle="false" app:useSimpleSummaryProvider="true" />
    <Preference android:title="@string/caption_setting_title" android:key="@string/caption_settings_key" android:summary="@string/caption_setting_description" app:iconSpaceReserved="false" app:singleLineTitle="false" />
    <SwitchPreferenceCompat android:title="@string/main_tabs_position_title" android:key="@string/main_tabs_position_key" android:summary="@string/main_tabs_position_summary" android:defaultValue="false" app:iconSpaceReserved="false" app:singleLineTitle="false" />
</PreferenceScreen>
