<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/settings_category_backup_restore_title"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference android:title="@string/import_data_title" android:key="@string/import_data" android:summary="@string/import_data_summary" app:iconSpaceReserved="false" app:singleLineTitle="false" />
    <Preference android:title="@string/export_data_title" android:key="@string/export_data" android:summary="@string/export_data_summary" app:iconSpaceReserved="false" app:singleLineTitle="false" />
    <Preference android:title="@string/reset_settings_title" android:key="@string/reset_settings" android:summary="@string/reset_settings_summary" app:iconSpaceReserved="false" app:singleLineTitle="false" />
</PreferenceScreen>
