<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/notifications" android:key="general_preferences"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceScreen android:title="@string/settings_category_player_notification_title" android:key="@string/player_notification_screen_key" android:summary="@string/settings_category_player_notification_summary" android:fragment="org.schabi.newpipe.settings.PlayerNotificationSettingsFragment" app:iconSpaceReserved="false" app:singleLineTitle="false" />
    <SwitchPreference android:title="@string/enable_streams_notifications_title" android:key="@string/enable_streams_notifications" android:summary="@string/enable_streams_notifications_summary" android:defaultValue="false" app:iconSpaceReserved="false" app:singleLineTitle="false" />
    <org.schabi.newpipe.settings.custom.DurationListPreference android:entries="@array/streams_notifications_interval_description" android:title="@string/streams_notifications_interval_title" android:key="@string/streams_notifications_interval_key" android:dependency="@string/enable_streams_notifications" android:defaultValue="@string/streams_notifications_interval_default" android:entryValues="@array/streams_notifications_interval_values" app:iconSpaceReserved="false" app:singleLineTitle="false" app:useSimpleSummaryProvider="true" />
    <ListPreference android:entries="@array/streams_notifications_network_description" android:title="@string/streams_notifications_network_title" android:key="@string/streams_notifications_network_key" android:dependency="@string/enable_streams_notifications" android:defaultValue="@string/streams_notifications_network_default" android:entryValues="@array/streams_notifications_network_values" app:iconSpaceReserved="false" app:singleLineTitle="false" app:useSimpleSummaryProvider="true" />
    <Preference android:title="@string/channels" android:key="@string/streams_notifications_channels_key" android:dependency="@string/enable_streams_notifications" android:fragment="org.schabi.newpipe.settings.notifications.NotificationModeConfigFragment" app:iconSpaceReserved="false" app:singleLineTitle="false" />
</PreferenceScreen>
