<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_rss_feed" android:id="@id/menu_item_rss" android:visible="false" android:title="@string/rss_button_title" app:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_share" android:id="@id/menu_item_share" android:title="@string/share" app:showAsAction="ifRoom" />
    <item android:id="@id/menu_item_notify" android:visible="false" android:orderInCategory="1" android:title="@string/get_notified" android:checkable="true" app:showAsAction="never" />
    <item android:id="@id/action_settings" android:orderInCategory="2" android:title="@string/settings" app:showAsAction="never" />
    <item android:id="@id/menu_item_openInBrowser" android:orderInCategory="3" android:title="@string/open_in_browser" app:showAsAction="never" />
</menu>
