<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:padding="16.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <org.schabi.newpipe.views.NewPipeTextView android:textSize="16.0sp" android:textStyle="bold" android:gravity="center" android:id="@id/error_message_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/general_error" />
    <org.schabi.newpipe.views.NewPipeTextView android:textSize="16.0sp" android:gravity="center" android:id="@id/error_message_service_info_view" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="6.0dip" android:text="@string/general_error" />
    <org.schabi.newpipe.views.NewPipeTextView android:textSize="16.0sp" android:textStyle="italic" android:gravity="center" android:id="@id/error_message_service_explanation_view" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/general_error" />
    <Button android:theme="@style/ServiceColoredButton" android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:textSize="16.0sp" android:id="@id/error_action_button" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/error_snackbar_action" android:textAllCaps="true" android:textAlignment="center" />
    <Button android:theme="@style/ServiceColoredButton" android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:textSize="16.0sp" android:id="@id/error_retry_button" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/retry" android:textAllCaps="true" android:textAlignment="center" />
    <Button android:theme="@style/ServiceColoredButton" android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:textSize="16.0sp" android:id="@id/error_open_in_browser" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:layout_marginBottom="8.0dip" android:text="@string/open_in_browser" android:textAllCaps="true" android:textAlignment="center" />
</LinearLayout>
